style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, "SF Pro", sans-serif;
}

body {
  height: 100vh;
  overflow: hidden;
  position: relative;
}

.banner-container {
  position: relative;
  width: 100%;
  height: 100%;
  background-image: url("images/bg.jpg");
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  gap: 34px;
}

.top-group {
  display: flex;
  flex-direction: column;
  gap: 24px;
  align-items: center;
}

.status-bar {
  width: 100%;
  height: 44px;
  position: absolute;
  top: 0;
  left: 0;
  background-color: transparent;
}

.close-btn {
  position: absolute;
  top: 65px;
  left: 20px;
  font-size: 18px;
  color: rgba(255, 255, 255, 0.4);
  text-decoration: none;
  z-index: 10;
}

.title {
  font-family: "SF Pro", sans-serif;
  font-size: 42px;
  line-height: 46px;
  letter-spacing: 0px;
  text-align: center;
  color: white;
  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
}

.image-grid {
  display: flex;
  gap: 6px;
}

.grid-image {
  flex: 1;
  object-fit: cover;
  border-radius: 8px;
  width: 100%;
  display: block;
}

.image-with-text {
  position: relative;
  flex: 1;
}

.text-overlay {
  position: absolute;
  bottom: 15px;
  left: 4px;
  right: 0;
  color: white;
  text-align: left;
  font-size: 12px;
  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
  line-height: 100%;
  padding: 0 5px;
}

.buttons-container {
  position: relative;
  max-width: 342px;
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.access-buttons-container {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.access-option {
  display: flex;
  flex-direction: column;
}

.access-option span {
  display: block;
}

.per-week {
  font-size: 16px;
  font-weight: 400;
  color: rgba(255, 255, 255, 0.3);
  margin-right: 28px;
}

.per-year {
  color: rgba(255, 255, 255, 0.3);
}

.best-offer-badge {
  position: absolute;
  right: 25px;
  top: 0px;
  transform: translateY(-50%);
  width: 119px;
  height: 20px;
  border-radius: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 12px;
  font-weight: 600;
  color: white;
  background: linear-gradient(90deg, #bc1fef 0%, #0035ff 100%);
  border: none;
  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.35);
}

.best-offer-badge.active {
  color: rgba(20, 17, 49, 1);
  background: #fff;
  border-color: white;
}

.action-btn {
  width: 100%;
  height: 56px;
  background-color: rgba(255, 255, 255, 0.9);
  border-radius: 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 24px;
  text-decoration: none;
  color: white;
  font-size: 15px;
  transition: background-color 0.2s;
  border: 1px solid transparent;
}
.action-btn.active {
  background: rgba(255, 255, 255, 0.3024);
  border: 1px solid rgb(255, 255, 255);
}
.action-btn.inactive {
  background: rgba(255, 255, 255, 0.1016);
}
.action-btn#btn-continue {
  font-size: 20px;
  font-weight: 600;
  color: rgba(7, 11, 51, 1);
  justify-content: center;
}

.banner-footer {
  margin-bottom: 40px;
}

.footer-links {
  list-style: none;
  display: flex;
  gap: 47px;
}

.footer-links a {
  color: rgba(255, 255, 255, 0.2);
  font-size: 12px;
  opacity: 0.8;
  font-weight: 100;
}

html[lang="de"] .title,
html[lang="fr"] .title {
  margin-top: 100px;
  font-size: 36px;
  line-height: 40px;
}

html[lang="de"] .footer-links,
html[lang="fr"] .footer-links {
  gap: 15px;
}

html[lang="de"] .text-overlay,
html[lang="fr"] .text-overlay {
  font-size: 12px;
  bottom: 5px;
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
  .banner-container {
    background-image: url("images/bg@2x.jpg");
  }
}

@media (-webkit-min-device-pixel-ratio: 3), (min-resolution: 288dpi) {
  .banner-container {
    background-image: url("images/bg@3x.jpg");
  }
}

@media (max-width: 376px) {
  .banner-container {
    background-position: center 22%;
  }

  .close-btn {
    top: 35px;
  }

  .banner-container {
    gap: 26px;
  }

  .image-grid {
    width: 97%;
  }

  .top-group {
    gap: 16px;
  }

  .buttons-container {
    width: 87%;
    gap: 8px;
  }

  .banner-footer {
    margin-bottom: 10px;
  }
}

